feat: register response with jwt token as expected in the web app